--- a/css/style.css
+++ b/css/style.css
@@ -399,11 +399,12 @@ body.lock {
     margin-left: -90px;
 }
 .order-item__number {
-    min-width: 10%;
+    min-width: 8%;
     font-size: 72px;
+    margin-left: 13px;
 }
 .order-item__text {
-    max-width: 50%;
+    max-width: 55%;
 }
 .order-item__img {
 }
@@ -413,11 +414,12 @@ body.lock {
     top: -70%;
     width: 30%;
     height: 400px;
-    max-width: 390px;
+    /* max-width: 390px; */
     display: flex;
     justify-content: center;
     align-items: center;
     padding: 0 10px;
+    cursor: zoom-in;
 }
 .order-item__img-left {
     left: 120px;
@@ -433,7 +435,7 @@ body.lock {
     top: -20%;
 }
 .order-item__text-width {
-    max-width: 30%;
+    max-width: 34%;
 }
 .order-item__img img {
     max-width: 100%;
@@ -800,7 +802,7 @@ body.lock {
     }
     
 }
-@media all and (max-height: 700px){
+@media all and (max-height: 690px){
     .content-main {
         padding: 0 10px;
         margin-top: 60px;
@@ -861,7 +863,7 @@ body.lock {
     .content-main__body * {
         margin-bottom: 0px;
     }
-        .header__container {
+    .header__container {
         display: flex;
         align-items: center;
         justify-content: space-between;
@@ -881,6 +883,10 @@ body.lock {
         display: inline-block;
         width: 100px;
     }
+    .popup__image-width {
+        width: 100%;
+        height: 100%;
+    }
 }
 @media all and (max-height: 360px){
     .content-main {
@@ -889,7 +895,7 @@ body.lock {
         margin-bottom: 0px;
         max-width: 100%;
     }
-    .content-main__bodyb {
+    .content-main__body {
         margin-bottom: 10px;
     }
     .content-main__body * {
@@ -1196,12 +1202,14 @@ body.lock {
         margin-left: 0;
     }
     .order-item__img-width {
-        height: 140px;
-        max-width: 320px;
+        position: initial;
+        height: 230px;
+        width: 100%;
         display: flex;
         justify-content: center;
         align-items: center;
         padding: 0 10px;
+        margin: 0 auto;
     }
 }
 @media (max-width: 685px) {
@@ -1214,6 +1222,21 @@ body.lock {
     } */
     .item__body-title {
         margin-top: 0px;
+    }
+    .order-item__img-width {
+        position: initial;
+        height: 180px;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 0 10px;
+        margin: 0 auto;
+    }
+}
+@media (max-width: 480px) {
+    .order-item__img-width {
+        height: 120px;
     }
 }
 
